@@ -4,3 +4,5 @@
 	* Stubbed out webhostd(8).
 2015-12-05 Fred Gleason <fredg@paravelsystems.com>
 	* Implemented the REBOOT command in webhostd(8).
+2015-12-05 Fred Gleason <fredg@paravelsystems.com>
+	* Implemented the UPGRADE command in webhostd(8).
